objects/VPPSR_Mailing_Address__c.object
<CustomObject>
    <fields>
        <fullName>Address_For_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address For Service</label>
        <referenceTo>VPPSR_Address_For_Service__c</referenceTo>
        <relationshipName>Mailing_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISO_Country_Code__c</fullName>
        <label>ISO Country Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country_Name__c</fullName>
        <label>country Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>line1__c</fullName>
        <label>line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>line2__c</fullName>
        <label>line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>line3__c</fullName>
        <label>line3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>locality__c</fullName>
        <label>locality</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>post_Code__c</fullName>
        <label>post Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Mailing Address</label>
    <nameField>
        <displayFormat>VMA-{0000000}</displayFormat>
        <label>Mailing Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailing Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>